src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A04.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A04 {
  class A;
  class B;
  interface A;
  class B;
  enum C;
  class C;
}